chore(event): refactor with applying factory method in expandedRecurringEvents #109